--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  background-color:rgba(0,0,0,.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-logo {
@@ -14,7 +19,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color:rgba(0,0,0,.1);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
